--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
+            SCF_GATEWAY: "https://service-9t5zs3nq-1300335002.ap-hongkong.apigateway.myqcloud.com/release/FODI",
             SITE_NAME: "FODI"
         };
 
